# -otus-cpp-basics

./: README.md
HomeWork2/: CMakeLists.txt  move_me_out.cpp
HomeWork3/: CMakeLists.txt  config.cpp  config.h  main.cpp  userscore.h  utils.cpp
HomeWork4/: README.md
HomeWork4/include/: lexer.h
HomeWork4/src/: lexer.cpp  parser.cpp
HomeWork5/: main.cpp  utils.cpp  utils.h
HomeWork5/stats/: CMakeLists.txt  istatistics.h  max_statistic.h  mean_statistic.h  min_statistic.h  pct_statistic.h  std_statistic.h
